# AZILE-partners

./: .flake8  .pre-commit-config.yaml  Brady_dialect.txt  Brady_leaders.txt  Brady_petnames.txt  Brady_responses.txt  Brewfile  Brewfile.lock.json  Caroline_dialect.txt  Caroline_leaders.txt  Caroline_petnames.txt  Caroline_responses.txt  ClassicEliza.py  Daria_responses.txt  ELIZA_original.rtf  Eliza_leaders.txt  Eliza_petnames.txt  Eliza_responses.txt  Jim_dialect.txt  Jim_leaders.txt  Jim_petnames.txt  Jim_responses.txt  LICENSE  Lizzy_dialect.txt  Lizzy_leaders.txt  Lizzy_petnames.txt  Lizzy_responses.txt  Makefile  OldSchool_personalitieS.txt  README.md  Therapist_Class.py  Therapist_Personalities.xlsx  Therapist_PersonalitiesA.txt  Willy_dialect.txt  Willy_leaders.txt  Willy_petnames.txt  Willy_responses.txt  cleanEliza.py  pyproject.toml  reLIZA.py  (+3 more)
Azile/: Azile_Partners.py  DEPRECATEDtherapist.py  response_triggers.py  session.py  session_responses.py  therapist.py
Azile/therapists/: Brady.yaml  Lizzy.yaml  therapy_personalities.txt
Azile/therapists/dialects/: dialect.py
Azile/therapists/personality_support_files/: Brady_dialect.txt  Brady_petnames.txt  Brady_responses.txt  Caroline_leaders.txt  Caroline_petnames.txt  Caroline_responses.txt  Daria_responses.txt  Eliza_dialect.txt  Eliza_leaders.txt  Eliza_petnames.txt  Eliza_responses.txt  Jim_leaders.txt  Jim_petnames.txt  (+9 more)
Other_Versions/Elizas/: rereLIZA.py
Other_Versions/Personalities/: OldSchool_personalitieS.txt  Patient_Class.py  Therapist_PersonalitiesA.txt  therapist_personalities.txt
(+15 files in other folders)
