[tool.poetry]
name = "azile-partners"
version = "0.1.0"
description = ""
authors = ["Rebecca Lovering <lovering810@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
spacy = "^3.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest-cov = "^2.8.1"
pytest = "^6.2.5"
notebook = "^6.4.7"
mypy = "^0.941"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
